force-app/main/default/objects/Sale__c/Sale__c.object-meta.xml
<CustomObject>
    <label>Sale</label>
    <nameField>
        <displayFormat>srno-{000}</displayFormat>
        <label>srno</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>