force-app/main/default/objects/Sale__c/fields/item__c.field-meta.xml
<CustomField>
    <fullName>item__c</fullName>
    <label>item</label>
    <referenceTo>item__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>