force-app/main/default/objects/Sale__c/fields/sqty__c.field-meta.xml
<CustomField>
    <fullName>sqty__c</fullName>
    <label>sqty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>