force-app/main/default/objects/Sale__c/fields/stock__c.field-meta.xml
<CustomField>
    <fullName>stock__c</fullName>
    <formula>item__r.qty__c  -  sqty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>